[package]
name = "speak_bot"
version = "1.0.0"
edition = "2018"
description = "Run a Discord bot that responds to mentions "
readme = "README.md"
homepage = "https://github.com/celeo/speak_bot"
repository = "https://github.com/celeo/speak_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "discord"
]
categories = [
  "command-line-utilities"
]

[dependencies]
anyhow = "1.0.42"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serenity = { version = "0.10.8", default-features = false, features = [
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend"
]}
structopt = "0.3.22"
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread"] }
