[package]
name = "speak_bot"
version = "1.1.0"
edition = "2018"
description = "Run a Discord bot that responds to mentions "
readme = "README.md"
homepage = "https://github.com/celeo/speak_bot"
repository = "https://github.com/celeo/speak_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "discord"
]
categories = [
  "command-line-utilities"
]

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend"
]}
structopt = "0.3.26"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
